Initial version. Uploaded infographics. Updated descriptions, added left/right nav buttons

--- a/_posts/2013-01-20-как-никогда-не-сдаваться.md
+++ b/_posts/2013-01-20-как-никогда-не-сдаваться.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Как никогда не сдаваться и стать предпринимателем
+description: В этой инфографике показано семь веских причин почему никогда не стоит сдаваться
 ---
 
-Начинать никогда не поздно, надо лишь не сдаваться.
-
-![Как икогда не сдаваться - инфографика](/img/kak-nikogda-ne-sdavatsja.jpg)
+Начинать никогда не поздно, надо лишь не сдаваться. Вот семь веских причин почему ты не должен сдаваться:
+![Как никогда не сдаваться - инфографика](/img/kak-nikogda-ne-sdavatsja.jpg)
