--- a/_posts/2013-05-09-как-работает-стартап-финансирование.md
+++ b/_posts/2013-05-09-как-работает-стартап-финансирование.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Как работает стартап-финансирование?
+description: Эта инфографика объясняет как работает стартап финансирование и как происходит разделение долей.
 ---
 
 Если вы запутались, кто, куда и сколько вкладывает, то вот наглядный процесс становления стартапа и его финансирования на каждом этапе, от самой идеи до выхода на IPO.
-
 ![Как работает стартап-финансирование, гипотетический стартап от идеи до IPO - инфографика](/img/kak-rabotaet-startap finansirovanie.png)
