--- a/_posts/2013-08-23-серийные-предприниматели-как-использовать-все-возможности.md
+++ b/_posts/2013-08-23-серийные-предприниматели-как-использовать-все-возможности.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Серийные предприниматели - как использовать все возможности
+description: В данной инфографике показано нужно ли посвятить себя одной идее, или запускать бизнесы один за одним.
 ---
 
 Нужно ли посвятить всего себя одной идее и заниматься этим до пенсии, или запускать бизнесы один за одним? В данной инфографике показано, что последний вариант - не самый плохой.
