--- a/_posts/2013-09-05-много-ли-у-нас-времени.md
+++ b/_posts/2013-09-05-много-ли-у-нас-времени.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: Много ли у нас времени
+title: Много ли у нас времени?
+description: Данная инфографика показывает сколько времени мы тратим каждый день в течении жизни.
 ---
 
 Cколько времени у нас осталось и как мы его проведем?
