--- a/_posts/2014-03-17-слишком-поздно-начинать.md
+++ b/_posts/2014-03-17-слишком-поздно-начинать.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: Слишком поздно начинать?
+description: Визуальное сравнение во сколько лет основатели компаний открыли свой бизнес.
 ---
 
-Начинать никогда не поздно, надо лишь не сдаваться.
+Начинать никогда не поздно, надо лишь не сдаваться. Во сколько лет снователи компаний открыли свой бизнес?	
 ![Слишком поздно начинать, кризис среднего возраста - инфографика](/img/slishkom-pozdno-nachinat.jpg)
