--- a/_posts/2014-03-19-потерялись-в-жизни-люди-приуспевшие-не-сразу.md
+++ b/_posts/2014-03-19-потерялись-в-жизни-люди-приуспевшие-не-сразу.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: Потерялись в жизни? Люди, преуспевшие не сразу
+description: Визуальное сравнение что делали известные предприниматели до того, как они стали известными.
 ---
 
-Начинать никогда не поздно, надо лишь не сдаваться.
+Начинать никогда не поздно, надо лишь не сдаваться. Чем занимались известные предприниматели до того, как они стали известными:
 ![Потерялись в жизни? Люди, преуспевшие не сразу - инфографика](/img/poterjalis-v-zhizni.jpg)
