--- a/_posts/2013-04-23-из-бедных-в-богатые.md
+++ b/_posts/2013-04-23-из-бедных-в-богатые.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Из бедных в богатые - чего стоит стать миллиардером?
+description: Инфографика которая показывает как многие миллиардеры-предприниматели добились успеха с нуля.
 ---
 
 Думаете, если ваши родители никогда не зарабатывали много, то и вы будете бедны? По статистике большинство сегодняшних миллиардеров происходят из обычных семей и всего добились сами:
-
 ![Из бедных в богатые, чего стоит стать миллиардером - инфографика](/img/iz-bednyh-v-bogatye.jpg)
