--- a/_posts/2013-05-09-как-работает-стартап-финансирование.md
+++ b/_posts/2013-05-09-как-работает-стартап-финансирование.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Как работает стартап-финансирование?
+title: Как работает финансирование стартапа?
 description: Эта инфографика объясняет как работает стартап финансирование и как происходит разделение долей.
 ---
 
