Added billion entrepreneurs infographic. Updated all posts adding sources and translation credit

--- a/_posts/2013-01-20-как-никогда-не-сдаваться.md
+++ b/_posts/2013-01-20-как-никогда-не-сдаваться.md
@@ -6,3 +6,4 @@ description: В этой инфографике показано семь вес
 
 Начинать никогда не поздно, надо лишь не сдаваться. Вот семь веских причин почему ты не должен сдаваться:
 ![Как никогда не сдаваться - инфографика](/img/kak-nikogda-ne-sdavatsja.jpg)
+<p class="credits">[Оригинал](http://fundersandfounders.com/how-to-never-give-up-becoming-entrepreneur/ "Читать оригинал на английском"). Перевод: [RusBase](http://rusbase.vc)</p>
