--- a/_posts/2013-08-23-серийные-предприниматели-как-использовать-все-возможности.md
+++ b/_posts/2013-08-23-серийные-предприниматели-как-использовать-все-возможности.md
@@ -5,5 +5,5 @@ description: В данной инфографике показано нужно 
 ---
 
 Нужно ли посвятить всего себя одной идее и заниматься этим до пенсии, или запускать бизнесы один за одним? В данной инфографике показано, что последний вариант - не самый плохой.
-Не зацикливаясь на одной "самой гениальной идее", эти люди заработали свои миллионы и миллиарды, претворяя в жизнь совершенно разные задумки:
 ![Серийные предприниматели, как использовать все возможности - инфографика](/img/serijnye-predprinimateli.jpg)
+<p class="credits">[Оригинал](http://fundersandfounders.com/serial-entrepreneurs-how-to-pursue-multiple-opportunities/ "Читать оригинал на английском"). Перевод: [RusBase](http://rusbase.vc)</p>
