--- a/_posts/2014-03-17-слишком-поздно-начинать.md
+++ b/_posts/2014-03-17-слишком-поздно-начинать.md
@@ -6,3 +6,4 @@ description: Визуальное сравнение во сколько лет 
 
 Начинать никогда не поздно, надо лишь не сдаваться. Во сколько лет снователи компаний открыли свой бизнес?	
 ![Слишком поздно начинать, кризис среднего возраста - инфографика](/img/slishkom-pozdno-nachinat.jpg)
+<p class="credits">[Оригинал](http://notes.fundersandfounders.com/post/79875850310/late-start-quarter-and-middle-life-crisis "Читать оригинал на английском") на англ.</p>
